--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -122,10 +122,15 @@
 
   <%# 商品一覧 %>
   <div class='item-contents'>
+  <% if user_signed_in? %>
     <h2 class='title'>ピックアップカテゴリー</h2>
-    <%= link_to '新規投稿商品', "#", class: "subtitle" %>
+    <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
     <ul class='item-lists'>
-
+  <% else %>
+    <h2 class='title'>ピックアップカテゴリー</h2>
+    <%= link_to '新規投稿商品', new_user_session_path, class: "subtitle" %>
+    <ul class='item-lists'>
+  <% end %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
         <%= link_to "#" do %>
