--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -121,10 +121,10 @@
   <%# /FURIMAの特徴 %>
 
   <%# 商品一覧 %>
+  
   <div class='item-contents'>
-  <% if user_signed_in? %>
     <h2 class='title'>ピックアップカテゴリー</h2>
-    <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
+    <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
   <% else %>
     <h2 class='title'>ピックアップカテゴリー</h2>
@@ -133,6 +133,7 @@
   <% end %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <% @items.each do |item| %>
+    <% if @items %>
       <li class='list'>
         <%= link_to "#" do %>
         <div class='item-img-content'>
@@ -165,16 +166,8 @@
   </div>
   <%# /商品一覧 %>
 </div>
-<% if user_signed_in? %>
-    <%= link_to(new_item_path, class: 'purchase-btn') do %>
-      <span class='purchase-btn-text'>出品する</span>
-      <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-    <% end %>
-<% else %>
-    <%= link_to(new_user_session_path, class: 'purchase-btn') do %>
-      <span class='purchase-btn-text'>出品する</span>
-      <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-    <% end %>
+<%= link_to('#', class: 'purchase-btn') do %>
+  <span class='purchase-btn-text'>出品する</span>
+  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
 <% end %>
 <%= render "shared/footer" %>
-
