--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -161,6 +161,7 @@
         <% end %>
       </li>
       <% end %>
+      <% end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
     </ul>
   </div>
