--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,8 +132,8 @@
     <ul class='item-lists'>
   <% end %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+      <% if @items %>
       <% @items.each do |item| %>
-    <% if @items %>
       <li class='list'>
         <%= link_to "#" do %>
         <div class='item-img-content'>
@@ -161,6 +161,24 @@
         <% end %>
       </li>
       <% end %>
+      <% else %>
+      <li class='list'>
+        <%= link_to '#' do %>
+        <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
+        <div class='item-info'>
+          <h3 class='item-name'>
+            商品を出品してね！
+          </h3>
+          <div class='item-price'>
+            <span>99999999円<br>(税込み)</span>
+            <div class='star-btn'>
+              <%= image_tag "star.png", class:"star-icon" %>
+              <span class='star-count'>0</span>
+            </div>
+          </div>
+        </div>
+        <% end %>
+      </li>
       <% end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
     </ul>
@@ -179,3 +197,4 @@
     <% end %>
 <% end %>
 <%= render "shared/footer" %>
+
