--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -140,9 +140,11 @@
           <%= image_tag item.image, class: "item-img" %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
-          <%# <div class='sold-out'>
+          <% if item.item_history.present? %> 
+          <div class='sold-out'>
             <span>Sold Out!!</span>
-          <% end %> 
+          </div>
+          <% end %>
           <%# //商品が売れていればsold outを表示しましょう %>
 
         </div>
